...
                  : 'bg-gray-100 dark:bg-gray-800 border-gray-100 dark:border-gray-800'
                  }`}
              >
                <Text
                  className={`text-center font-bold ${language === lang ? 'text-white' : 'text-gray-900 dark:text-gray-100'}`}
                >
                  {lang === 'en' ? 'English' : 'Türkçe'}
                </Text>
              </TouchableOpacity>
            ))}
          </View>
        </View>

...
